Fix: 헤더 z-index main보다 높게 수정

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -29,7 +29,7 @@ header {
   align-items: center;
   width: 100%;
   min-height: 8rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 main {
